syntax = "proto3";
package proto;

option go_package = "github.com/veraison/services/proto";

import "attestation_format.proto";

message AttestationToken {
	int64 tenant_id = 1;
	AttestationFormat format = 2;
	bytes data = 3;

}
